--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,7 +11,7 @@
         {%- assign default_paths = site.pages | map: "path" -%}
         {%- assign page_paths = site.header_pages | default: default_paths -%}
         {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-        <a class="site-title" rel="author" href="/"><img src="/index.webp" Height="32" /> LangGraph-GUI</a>
+        <a class="site-title" rel="author" href="/"><img src="/index.webp" Height="32" /> LangGraph-ChatBot</a>
     
           <nav class="site-nav">
             <input type="checkbox" id="nav-trigger" class="nav-trigger" />
@@ -24,10 +24,8 @@
             </label>
     
             <div class="trigger">
-              <a class="page-link" href="/About/">About</a>
-              <a class="page-link" href="/Frontend/">Frontend</a>
-              <a class="page-link" href="/Backend/">Backend</a>
-              <a class="page-link" href="/Others/">Others</a>
+              <a class="page-link" href="/ChatBot/">ChatBot</a>
+              <a class="page-link" href="/Graph/">Graph</a>
             </div>
           </nav>
       </div>
