--- a/_layouts/chatbot.html
+++ b/_layouts/chatbot.html
@@ -6,7 +6,7 @@ layout: base
 
 <script>
   document.addEventListener('DOMContentLoaded', function() {
-    fetch('/Chatbot/outline.html')
+    fetch('/ChatBot/outline.html')
       .then(response => response.text())
       .then(data => {
         document.getElementById('outline').innerHTML = data;
