--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,6 +24,7 @@
             </label>
     
             <div class="trigger">
+              <a class="page-link" href="/Tutorial/">Tutorial</a>
               <a class="page-link" href="/ChatBot/">ChatBot</a>
               <a class="page-link" href="/Graph/">Graph</a>
             </div>
